# Alixco-luce-Shop

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
.agents/workflows/: dexty-rules.md  skill-agent.md
.claude/: settings.json
.dexty/: temp-memory-projet.md
backend/: .dockerignore  BUILD_REPORT.md  Dockerfile  README.md  create_admin.py  main.py  migrate_language.py  pyproject.toml  seed.py  seed_categories.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: analytics.py  auth.py  categories.py  featured_products.py  orders.py  page_settings.py  poc.py  products.py  testimonials.py  upload.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: schemas.py  user.py
frontend/: .gitignore  COMPLETE_ANALYSIS_REPORT.md  FIXES_APPLIED_REPORT.md  FRONTEND_TEST_REPORT.md  README.md  TEST_AND_FIX_SUMMARY.sh  fix-exports.js  fix-imports.js  package-lock.json  package.json  prisma.config.ts  tailwind.config.js  test-db.ts
frontend-admin/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend-admin/src/app/: globals.css  layout.tsx  page.tsx
frontend-admin/src/context/: AuthContext.tsx
frontend-admin/src/services/: api.ts
frontend/prisma/: schema.prisma
frontend/scripts/: create-admin.ts  create-storage-bucket.ts  migrate-mongo-to-postgres.ts  seed-mock-products.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: Header.tsx  (+1 more)
(+95 files in other folders)
